syntax = "proto3";

package studentservice;

service StudentService {
  rpc GetAll (GetAllRequest) returns (stream GetAllResponse) {}
  rpc GetByID (GetByIDRequest) returns (GetByIDResponse) {}
}

message GetAllRequest {};

message GetAllResponse {
  string CUIL = 1;
  string DNI = 2;
  string first_name = 3;
  string second_name = 4;
  string last_name1 = 5;
  string last_name2 = 6;
  string phone_number = 7;
  string landline_phone_number = 8;
  string direction = 9;
  string blood_type = 10;
  string social_work = 11;
};

message GetByIDRequest {
  string CUIL = 1;
};

message GetByIDResponse {
  string CUIL = 1;
  string DNI = 2;
  string first_name = 3;
  string second_name = 4;
  string last_name1 = 5;
  string last_name2 = 6;
  string phone_number = 7;
  string landline_phone_number = 8;
  string direction = 9;
  string blood_type = 10;
  string social_work = 11;
};